<resources>
    <string name="app_name">RoLife</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginfrag_didyouforget">¿Olvidaste la contraseña?</string>
    <string name="loginfrag_login">Login</string>
    <string name="loginfrag_password">Contraseña</string>
    <string name="loginfrag_user">Usuario</string>
    <string name="loginfrag_register">Registro</string>
    <string name="loginActivity_botondegoogle">Boton de google</string>
    <string name="loginActivity_icono">icono de la aplicación</string>
    <string name="forgetfrag_enviar">Enviar</string>
    <string name="forgetfrag_email">E-mail</string>
    <string name="login_uservalue">Usuario</string>
    <string name="register_value">E-mail</string>
    <string name="forget_TVExample">Si eres un calvo, no eres bienvenido</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>