<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/loginfrag_ETuser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:background="@drawable/loginfrag_styletvbg"
        android:hint="@string/loginfrag_user"
        android:inputType="text"

        android:textSize="30sp"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"


        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".15"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/loginfrag_ETpass"
        android:background="@drawable/loginfrag_styletvbg"
        android:textSize="30sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/loginfrag_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"


        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginfrag_ETuser"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/loginfrag_BTNlogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/loginfrag_login"
        android:textSize="30sp"
        android:background="@drawable/loginfrag_stylebtnbg"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginfrag_ETpass"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/loginfrag_BTNregister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/loginfrag_register"
        android:textSize="25sp"
        android:background="@drawable/loginfrag_stylebtnbg"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginfrag_BTNlogin"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent=".8" />

    <TextView
        android:id="@+id/loginfrag_TVforgetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/loginfrag_didyouforget"

        android:textColor="#DD2C00"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/loginfrag_ETuser"

        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginfrag_ETpass"
        app:layout_constraintVertical_bias="0"
       />

    <Button
        android:id="@+id/loginfrag_BTNforgetpass"
        android:alpha="0"
        android:layout_width="180dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/loginfrag_didyouforget"
        android:onClick="onClick"
        android:textColor="#DD2C00"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/loginfrag_ETuser"

        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginfrag_ETpass"
        app:layout_constraintVertical_bias="0"
        />


</androidx.constraintlayout.widget.ConstraintLayout>