<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/registerfrag_ETuser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_uservalue"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"


        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent=".8" />
    <EditText
        android:id="@+id/registerfrag_ETemail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/register_value"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"


        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/registerfrag_ETuser"
        app:layout_constraintVertical_bias=".15"
        app:layout_constraintWidth_percent=".8" />
    <EditText
        android:id="@+id/registerfrag_ETPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/loginfrag_password"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"

        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/registerfrag_ETemail"
        app:layout_constraintVertical_bias=".15"
        app:layout_constraintWidth_percent=".8" />
    <EditText
        android:id="@+id/registerfrag_ETConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/loginfrag_password"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"

        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/registerfrag_ETPassword"
        app:layout_constraintVertical_bias=".15"
        app:layout_constraintWidth_percent=".8" />


    <Button
        android:id="@+id/registerfrag_BTNRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/loginfrag_register"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".1"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/registerfrag_ETConfirmPassword"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintWidth_percent=".45" />

    <Button
        android:id="@+id/registerfrag_BTNBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="atras"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".1"

        app:layout_constraintStart_toEndOf="@+id/registerfrag_BTNRegister"
        app:layout_constraintTop_toTopOf="@id/registerfrag_ETConfirmPassword"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintWidth_percent=".45" />




</androidx.constraintlayout.widget.ConstraintLayout>